--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.0",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
