[Tests]: Wrote tests for /api/register

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "outDir": "dist",
     "sourceMap": true,
     "strictNullChecks": true,
+    "baseUrl": ".",
+    "esModuleInterop": true
   },
   "files": ["./node_modules/@types/node/index.d.ts"],
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "tests"]
 }
