--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "lint": "eslint --ext .ts src/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --exit --recursive 'src/tests/*.ts'"
   },
   "keywords": [],
   "author": "",
@@ -22,13 +22,17 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "chai": "^4.3.7",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
