--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "lint": "eslint --ext .ts src/",
-    "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --exit --recursive 'src/tests/*.ts'"
+    "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --exit --recursive 'src/tests/*.ts'",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
