--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "lint": "eslint --ext .ts src/",
+    "lint": "eslint --ext .ts src/ --max-warnings=0",
     "test": "./node_modules/.bin/mocha --require ts-node/register --require tsconfig-paths/register --exit --recursive 'src/tests/*.ts'",
     "prepare": "husky install"
   },
